# car-rl

./: .gitignore  CODEX.md  README.md  SESSION.md  pyproject.toml
runs/ppo_straight_corridor_boundary_20260222_002520/: config.json  eval_history.json  final_eval.json
src/car_rl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/car_rl/agents/: __init__.py  base.py  constant.py  engineered.py
src/car_rl/apps/: benchmark_agents.py  common.py  eval_policy.py  inspect_policy_input.py  run_gym_smoke.py  run_headless.py  run_viz.py  run_viz_policy.py  train_sb3_ppo.py
src/car_rl/core/: dynamics.py  geometry.py  map_data.py  simulator.py  types.py
src/car_rl/env/: __init__.py  environment.py  features.py  gym_env.py  observation.py
src/car_rl/maps/: __init__.py  easy_turn.json  maze_small.json  registry.py  s_curve.json  straight_corridor.json
src/car_rl/viz/: __init__.py  websocket_stream.py
web/: index.html
