[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "car-rl"
version = "0.1.0"
description = "Headless bicycle-model simulator with RL-ready environment and web visualization"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.24",
  "websockets>=12.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
